# gnss-sdr

./: .clang-format  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DO NOT ACCEPT PULL.txt  Doxyfile  MANIFEST.md  README  README.md  README_fork.md  file1  galileo-e5b-port-error-debug.txt  gnss.conf  jamroot.jam  plot_acq_grid_gsoc_e5.m  pr_test.txt
drivers/gr-dbfcttc/: CMakeLists.txt  README
drivers/gr-dbfcttc/docs/: README.dbfcttc
drivers/gr-dbfcttc/grc/: CMakeLists.txt  dbfcttc_raw_array.xml  test_grc2.grc  top_block.py
drivers/gr-dbfcttc/lib/: CMakeLists.txt  qa_dbfcttc.cc  qa_dbfcttc.h  qa_raw_array.cc  qa_raw_array.h  raw_array_impl.cc  raw_array_impl.h  test_dbfcttc.cc
drivers/gr-dbfcttc/python/: CMakeLists.txt  __init__.py  qa_raw_array.py
drivers/gr-dbfcttc/swig/: CMakeLists.txt  dbfcttc_swig.i
drivers/gr-gn3s/include/: CMakeLists.txt  fusb.h  fusb_linux.h  gn3s.h  gn3s_api.h  gn3s_defines.h  gn3s_source.h  gn3s_source_cc.h
drivers/gr-gn3s/lib/: CMakeLists.txt  fusb.cc  fusb_linux.cc  fusb_sysconfig_linux.cc  gn3s.cc  gn3s_firmware.ihx  gn3s_source.cc  gn3s_source_cc.cc  qa_gn3s_source_cc.cc
drivers/gr-gn3s/swig/: CMakeLists.txt  gn3s_swig.i
drivers/gr-gnss_sdr/lib/: CMakeLists.txt  capture.cpp  gnss_sdr_source_b_impl.cc  gnss_stream.c  qa_gnss_sdr.cc  test_gnss_sdr.cc
src/: CMakeLists.txt  jamfile.jam
src/algorithms/: CMakeLists.txt  jamfile.jam
src/algorithms/PVT/: CMakeLists.txt
src/algorithms/acquisition/: CMakeLists.txt
src/algorithms/channel/: CMakeLists.txt  jamfile.jam
src/algorithms/conditioner/: CMakeLists.txt  jamfile.jam
src/algorithms/data_type_adapter/: CMakeLists.txt
src/algorithms/input_filter/: CMakeLists.txt  jamfile.jam
src/algorithms/libs/: CMakeLists.txt  NHbeidou.cc  accumulate_array.h  beidou_b1I_signal_processing.cc  beidou_b1I_signal_processing.h  beidou_b1i_signal_processing.cc  beidou_b1i_signal_processing.h  beidou_b1i_signal_replica.cc  beidou_b1i_signal_replica.h  beidou_b2a_signal_replica.cc  beidou_b2a_signal_replica.h  beidou_b3i_signal_processing.cc  beidou_b3i_signal_processing.h  beidou_b3i_signal_replica.cc  beidou_b3i_signal_replica.h  beidou_sdr_signal_processing.cc  beidou_sdr_signal_processing.h  beidou_sdr_signal_processing_old.cc  beidou_sdr_signal_processing_prova.cc  beidou_sdr_signal_processing_test_2ms.cc  beidou_sdr_signal_processing_test_2ms.h  beidou_sdr_test.cc  byte_x2_to_complex_byte.cc  byte_x2_to_complex_byte.h  cl.hpp  clFFT.h  code_resampler.h  complex_byte_to_float_x2.cc  complex_byte_to_float_x2.h  complex_float_to_complex_byte.cc  complex_float_to_complex_byte.h  conjugate_cc.cc  conjugate_cc.h  conjugate_ic.cc  conjugate_ic.h  conjugate_sc.cc  conjugate_sc.h  cshort_to_float_x2.cc  cshort_to_float_x2.h  dump_logger_helper.h  (+110 more)
src/algorithms/observables/: CMakeLists.txt  jamfile.jam
src/algorithms/output_filter/: CMakeLists.txt  jamfile.jam
src/algorithms/resampler/: CMakeLists.txt  jamfile.jam
src/algorithms/signal_generator/: CMakeLists.txt
src/algorithms/signal_source/: CMakeLists.txt
src/algorithms/telemetry_decoder/: CMakeLists.txt  jamfile.jam
src/algorithms/tracking/: CMakeLists.txt  jamfile.jam
src/core/: CMakeLists.txt  jamfile.jam
src/core/interfaces/: acquisition_interface.h  channel_interface.h  configuration_interface.h  gnss_block_interface.h  observables_interface.h  pvt_interface.h  signal_source_interface.h  telemetry_decoder_interface.h  tracking_interface.h
src/core/libs/: CMakeLists.txt  INIReader.cc  INIReader.h  channel_event.cc  channel_event.h  channel_status_msg_receiver.cc  channel_status_msg_receiver.h  command_event.cc  command_event.h  galileo_e6_has_msg_receiver.cc  galileo_e6_has_msg_receiver.h  galileo_tow_map.cc  galileo_tow_map.h  gnss_crypto.cc  gnss_crypto.h  gnss_message.cc  gnss_message.h  gnss_sdr_fpga_sample_counter.cc  gnss_sdr_fpga_sample_counter.h  gnss_sdr_sample_counter.cc  gnss_sdr_sample_counter.h  gnss_sdr_supl_client.cc  gnss_sdr_supl_client.h  gnss_sdr_time_counter.cc  gnss_sdr_time_counter.h  ini.cc  ini.h  jamfile.jam  nav_message_monitor.cc  nav_message_monitor.h  nav_message_packet.h  nav_message_udp_sink.cc  nav_message_udp_sink.h  osnma_helper.cc  osnma_helper.h  (+11 more)
src/gui_ini_files/: Readme.md
src/main/: CMakeLists.txt  jamfile.jam  main.cc
src/tests/: CMakeLists.txt  jamfile.jam  single_test_main.cc  test_main.cc
src/utils/: CMakeLists.txt  PVT.mat  aaa.m  observables.mat  plot_acquisition_magnitudes.m  plot_carrier_spectrum.m  plot_delay_signal.m  plot_delay_spectrum.m  plot_gps_signal_spectrum.m  plot_pfssa.m  plot_prn_code_signal.m  plot_resampled_prn_code_signal.m  plot_resampled_prn_code_spectrum.m  prn_spectrum_analysis.m  spectrum_analysis.m  spectrum_analysis_complex.m  untitled.m
utils/: CMakeLists.txt
utils/front-end-cal/: CMakeLists.txt  front_end_cal.cc  front_end_cal.h  main.cc
utils/matlab/: dll_pll_veml_plot_sample.m  gps_l1_ca_kf_plot_sample.m  gps_l1_ca_pvt_plot_sample_agilent_cap2.m  gps_l1_ca_pvt_raw_plot_sample.m  gps_l1_ca_telemetry_plot_sample.m  help_script1.m  help_script2.m  hybrid_observables_plot_sample.m  plot_acq_grid.m  plot_acq_grid_gsoc.m  plot_acq_grid_gsoc_e5.m  plot_acq_grid_gsoc_glonass.m  plot_tracking_quality_indicators.m
utils/nav-listener/: CMakeLists.txt  README.md  nav_message.proto  nav_msg_udp_listener.cc  nav_msg_udp_listener.h
utils/osnma-log-viewer/: .gitignore  README.md  osnma_log_viewer.py
utils/patches/: gnsstk_gcc15.patch  gnsstk_static15.patch  ion_gnss_standard_cmake.patch
utils/python/: dll_pll_veml_plot_sample.py  gps_l1_ca_kf_plot_sample.py  gps_l1_ca_pvt_raw_plot_sample.py  hybrid_observables_plot_sample.py  plot_tracking_quality_indicators.py  vtl_analysis.py  vtl_plot_data.py
utils/rinex-tools/: CMakeLists.txt  obsdiff.cc  obsdiff_flags.h
utils/rinex2assist/: CMakeLists.txt  README.md  main.cc
utils/scripts/: gnss-sdr-harness.sh
utils/skyplot/: README.md  skyplot.py
(+5072 files in other folders)
